; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ice1712/extr_prodigy_hifi.c_wm8766_spi_send_word.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/pci/ice1712/extr_prodigy_hifi.c_wm8766_spi_send_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ice1712 = type { i32 }

@WM8766_SPI_CLK = common dso_local global i32 0, align 4
@WM8766_SPI_MD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_ice1712*, i32)* @wm8766_spi_send_word to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wm8766_spi_send_word(%struct.snd_ice1712* %0, i32 %1) #0 {
  %3 = alloca %struct.snd_ice1712*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.snd_ice1712* %0, %struct.snd_ice1712** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %26, %2
  %7 = load i32, i32* %5, align 4
  %8 = icmp slt i32 %7, 16
  br i1 %8, label %9, label %29

9:                                                ; preds = %6
  %10 = load %struct.snd_ice1712*, %struct.snd_ice1712** %3, align 8
  %11 = load i32, i32* @WM8766_SPI_CLK, align 4
  %12 = call i32 @set_gpio_bit(%struct.snd_ice1712* %10, i32 %11, i32 0)
  %13 = call i32 @udelay(i32 1)
  %14 = load %struct.snd_ice1712*, %struct.snd_ice1712** %3, align 8
  %15 = load i32, i32* @WM8766_SPI_MD, align 4
  %16 = load i32, i32* %4, align 4
  %17 = and i32 %16, 32768
  %18 = call i32 @set_gpio_bit(%struct.snd_ice1712* %14, i32 %15, i32 %17)
  %19 = call i32 @udelay(i32 1)
  %20 = load %struct.snd_ice1712*, %struct.snd_ice1712** %3, align 8
  %21 = load i32, i32* @WM8766_SPI_CLK, align 4
  %22 = call i32 @set_gpio_bit(%struct.snd_ice1712* %20, i32 %21, i32 1)
  %23 = call i32 @udelay(i32 1)
  %24 = load i32, i32* %4, align 4
  %25 = shl i32 %24, 1
  store i32 %25, i32* %4, align 4
  br label %26

26:                                               ; preds = %9
  %27 = load i32, i32* %5, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %5, align 4
  br label %6

29:                                               ; preds = %6
  ret void
}

declare dso_local i32 @set_gpio_bit(%struct.snd_ice1712*, i32, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
